[gd_scene load_steps=2 format=3 uid="uid://dnqc6wqin3ncj"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_extin"]

[node name="Gui" type="Node2D"]
script = ExtResource("1_extin")

[node name="Button" type="Button" parent="."]
offset_right = 16.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 5
text = "esc"

[node name="Label" type="Label" parent="."]
offset_left = 64.0
offset_top = 8.0
offset_right = 90.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 5
text = "money: 0"

[node name="Label2" type="Label" parent="."]
offset_left = 37.0
offset_top = 8.0
offset_right = 63.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 5
text = "points: 0"

[node name="Button2" type="Button" parent="."]
offset_left = 1.0
offset_top = 143.0
offset_right = 43.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 5
text = "trade"

[node name="Button3" type="Button" parent="."]
offset_left = 43.0
offset_top = 143.0
offset_right = 90.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 5
text = "shop
"

[node name="Label3" type="Label" parent="."]
offset_left = 46.0
offset_right = 78.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 5
text = "Player X turn"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
